[tool.poetry]
name = "mini-aqm"
version = "0.1.0"
description = "https://igor.moomers.org/minimal-viable-air-quality"
authors = ["Igor Serebryany <igor47@moomers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.4"
click = "^7.1.2"
colorama = "^0.4.3"
systemd-watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
